...
  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final favoritesAsync = ref.watch(favoritesProvider);

    return Scaffold(
      appBar: AppBar(
        title: const Text('Favoritos'),
        leading: BackButton(onPressed: () => context.go('/')),
      ),
      body: favoritesAsync.when(
        data: (favorites) => favorites.isEmpty
            ? const Center(
                child: Column(
...
